--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
 <head>
 <!-- Basic Page Needs
 ================================================== -->
-<title>Home</title>
+<title>Jiawen Zhang</title>
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="description" content="">
-<meta name="author" content="">
+<meta name="description" content="JZ Personal websites">
+<meta name="author" content="Jiawen Zhang">
 
 <!-- Mobile Specific Metas 
 ================================================== -->
@@ -18,10 +18,10 @@
 
 <!-- Favicons
 ================================================== -->
-<link rel="shortcut icon" href="images/favicon.png">
-<link rel="apple-touch-icon" href="images/apple-touch-icon.png">
-<link rel="apple-touch-icon" sizes="72x72" href="images/apple-touch-icon-72x72.png">
-<link rel="apple-touch-icon" sizes="114x114" href="images/apple-touch-icon-114x114.png">
+<link rel="shortcut icon" href="images/favicon.ico">
+<link rel="apple-touch-icon" href="images/homepage_icon.png">
+<link rel="apple-touch-icon" sizes="72x72" href="images/icon_72.png">
+<link rel="apple-touch-icon" sizes="114x114" href="images/icon_144.png">
 
 <!--fonts
 ====================================================-->
@@ -48,7 +48,7 @@
 	<div class="shadow-img"></div> 
 	<img src="images/front-image.jpg" class="front-img img-responsive" alt ="Front-image"><!--IMAGE FOR FRONT SCREEN-->
 	<h1>Jack <span class="invert">Zhang</span></h1><!--PROFILE NAME-->
-	<h3 class="invert" style="margin-top: -10px; margin-bottom: 10px;">Web <span class="rotate">Developer, Designer, Artist</span></h3> <!--SUBTITLE IN PROFILE-->
+	<h3 class="invert" style="margin-top: -10px; margin-bottom: 10px;"><span class="rotate">UW CS Student, iOS Developer, Web Developer</span></h3> <!--SUBTITLE IN PROFILE-->
 	<div class="frontclick"><img src="images/click.png" alt="" class="img-responsive"><span class="pulse"></span></div>
 </div>
 <!--FRONT PAGE/ SPLASH SCREEN SECTION ENDS-->
@@ -59,7 +59,7 @@
 			<!--namecard-->
 			<div id="namecard" class="namecard">
 				<div class="shadow-img"></div>
-				<h1 class="maintitle">Jiawen <span class="invert">Zhang</span></h1><!--PROFILE NAME-->
+				<h1 class="maintitle">Jiawen (Jack) <span class="invert">Zhang</span></h1><!--PROFILE NAME-->
 				<h3 class="invert sub-maintitle">Web 
 					<span class="rotate">Developer, Designer, Artist</span><!--SUBTITLE AFTET NAME-->
 				</h3>
