--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 	<div class="shadow-img"></div> 
 	<img src="images/front-image.jpg" class="front-img img-responsive" alt ="Front-image"><!--IMAGE FOR FRONT SCREEN-->
 	<h1>Jack <span class="invert">Zhang</span></h1><!--PROFILE NAME-->
-	<h3 class="invert" style="margin-top: -10px; margin-bottom: 10px;"><span class="rotate">UW CS Student, iOS Developer, Web Developer</span></h3> <!--SUBTITLE IN PROFILE-->
+	<h3 class="invert" style="margin-top: -10px; margin-bottom: 10px;"><span class="rotate">UW CS Student,Software Engineer,Robotics Engineer</span></h3> <!--SUBTITLE IN PROFILE-->
 	<div class="frontclick"><img src="images/click.png" alt="" class="img-responsive"><span class="pulse"></span></div>
 </div>
 <!--FRONT PAGE/ SPLASH SCREEN SECTION ENDS-->
@@ -60,8 +60,8 @@
 			<div id="namecard" class="namecard">
 				<div class="shadow-img"></div>
 				<h1 class="maintitle">Jiawen (Jack) <span class="invert">Zhang</span></h1><!--PROFILE NAME-->
-				<h3 class="invert sub-maintitle">Web 
-					<span class="rotate">Developer, Designer, Artist</span><!--SUBTITLE AFTET NAME-->
+				<h3 class="invert sub-maintitle"> 
+					<span class="rotate">UW CS Student,Software Engineer,Robotics Engineer</span><!--SUBTITLE AFTET NAME-->
 				</h3>
 				<img id="profile-img" class="profile-img transparent" src="images/profile-thum.png" alt="profile-image"><!--PROFILE IMAGE-->
 			</div><!--/#namecard-->
@@ -79,7 +79,7 @@
 					</li>
 				   <li class="nav-btn folio-btn" data-filter="*" title="Portfolio" data-page="portfolio">
 						<div class="hover-background"></div>
-						<span>Portfolio</span><i class="fa fa-suitcase fa-fw"></i>
+						<span>Project</span><i class="fa fa-suitcase fa-fw"></i>
 					</li>
 					<li class="nav-btn" title="Contact" id="contact-link" data-page="contact">
 						<div class="hover-background"></div>
@@ -90,11 +90,9 @@
 				<!--SOCIAL NAV MENU-->
 				<div class="social-menu-container">
 					<ul class="social-menu no-padding">                     
-						<li><a href=""><i class="fa fa-facebook"></i></a></li>
-						<li><a href=""><i class="fa fa-google-plus"></i></a></li>
-						<li><a href=""><i class="fa fa-youtube"></i></a></li>
-						<li><a href=""><i class="fa fa-pinterest-p"></i></a></li>
-						<li><a href=""><i class="fa fa-linkedin"></i></a></li>
+						<li><a href="https://www.facebook.com/100022309471579"><i class="fa fa-facebook"></i></a></li>
+						<li><a href="https://github.com/Jiawen-Zhang"><i class="fa fa-github"></i></a></li>
+						<li><a href="https://www.linkedin.com/in/jiawen-jack-zhang/"><i class="fa fa-linkedin"></i></a></li>
 					</ul>
 				</div><!--/.social-menu-container-->
 			</div><!--#menu-container-->
@@ -105,26 +103,29 @@
 				<li id="home" class="selected">
 					<div class="title-container hidden">
 						<div class="shadow-img"></div> 
-						<h2 class="rotate-out">Welcome To <span class="invert">My Profile</span></h2><!--HOME TITLE-->                          
+						<h2 class="rotate-out">Welcome To <span class="invert">My Personal Website</span></h2><!--HOME TITLE-->                          
 					</div>
 					<div class="description hidden">
 						<div class="watermark-home"></div> 
 
 						<div class="fade-text transparent">
 							<!--DESCRIPTION ON HOME-->
-							<div class="strong-text">Hello, I am <span>John Doe</span></div>
-							<div class="focus-text"><span>Web Developer & </span><span>Web Designer</span></div>
-							<p class="large-paragraph">I have ten years experience as a web/interface designer.I have a love of clean, elegant styling. I have lots of experience in the production of CSS and HTML for modern websites.</p>         
+							<div class="strong-text">Hello, I am <span>Jiawen (Jack) Zhang</span></div>
+							<div class="focus-text"><span>4<sup>th</sup> year CS Student at the University of Waterloo</span></div>
+							<p class="large-paragraph">I am interested in fancy technology and willing to learn new stuff. I constantly keep an eye on the latest tech-info and closely follow the trend of its development, so as to renew my knowledge; because in this field, not to advance is to go back. Besides programming, I have rich experience in adolescent robotics competitions, so I know the robotics education marketing very well.</p>         
 							<!--DESCRIPTION ON HOME ENDS-->
 						</div>
 
 						<!--ALL PERSONAL DETAILS-->
-						<h3 class="personal-info-title title">Personal Info</h3>
+						<h3 class="personal-info-title title">Life Motto</h3>
 						<ul class="personal-info">
+							<p class="large-paragraph" style="margin-top: -10px">To ordain conscience for Heaven and Earth,<br/>To secure life and fortune for the people,<br/>To continue lost teachings for past sages,<br/>To establish peace for all future generations.</p>
+						<!--
 							<li class="rotate-out rotated"><label>Name</label><span>Anderson smith</span></li>                     
 							<li class="rotate-out rotated"><label>Address</label><span>Melbourne Victoria 3000 Australia</span></li>
 							<li class="rotate-out rotated"><label>Email</label><span>nurealamsabbir@authlab.io</span></li>  
 							<li class="rotate-out rotated"><label>Phone</label><span>+8801979791001</span></li>
+						-->
 						</ul><!--/ul.personal-info-->
 					</div>
 				</li><!--/#home-->
@@ -419,11 +420,9 @@
 				<!--SOCIAL NAV FOR MOBILE-->
 				<ul class="mobile-social no-padding">
 					<li>Connect With Me</li>
-					<li><a href=""><i class="fa fa-facebook"></i></a></li>
-					<li><a href=""><i class="fa fa-google-plus"></i></a></li>
-					<li><a href=""><i class="fa fa-youtube"></i></a></li>
-					<li><a href=""><i class="fa fa-pinterest-p"></i></a></li>
-					<li><a href=""><i class="fa fa-linkedin"></i></a></li>
+					<li><a href="https://www.facebook.com/100022309471579"><i class="fa fa-facebook"></i></a></li>
+					<li><a href="https://github.com/Jiawen-Zhang"><i class="fa fa-github"></i></a></li>
+					<li><a href="https://www.linkedin.com/in/jiawen-jack-zhang/"><i class="fa fa-linkedin"></i></a></li>
 				</ul><!--/.mobile-social-->
 			</div>               
 		</div><!--/.page-segment -->
