--- a/index.html
+++ b/index.html
@@ -49,7 +49,23 @@
 	<img src="images/front-image.jpg" class="front-img img-responsive" alt ="Front-image"><!--IMAGE FOR FRONT SCREEN-->
 	<h1>Jack <span class="invert">Zhang</span></h1><!--PROFILE NAME-->
 	<h3 class="invert" style="margin-top: -10px; margin-bottom: 10px;"><span class="rotate">UW CS Student,Software Engineer,Robotics Engineer</span></h3> <!--SUBTITLE IN PROFILE-->
+	<div class="frontclick"><img id="click" alt="" class="img-responsive"><span class="pulse"></span></div>
+	<!--Click on PC-->
+	<script type="text/javascript">
+		//var sUserAgent = navigator.userAgent.toLowerCase();
+		try{
+			if (/(Android|webOS|iPhone|iPod|iPad|iOS|BlackBerry)/i.test(navigator.userAgent)) {
+				console.log(navigator.userAgent);
+			}else{
+				console.log(navigator.userAgent);
+				element = document.getElementById("click");
+				element.src = "images/click.png";
+			}
+		}catch(e){}
+	</script>
+<!--
 	<div class="frontclick"><img src="images/click.png" alt="" class="img-responsive"><span class="pulse"></span></div>
+-->
 </div>
 <!--FRONT PAGE/ SPLASH SCREEN SECTION ENDS-->
 <!--container-->
