--- a/index.html
+++ b/index.html
@@ -136,12 +136,6 @@
 						<h3 class="personal-info-title title">Life Motto</h3>
 						<ul class="personal-info">
 							<p class="large-paragraph" style="margin-top: -10px">To ordain conscience for Heaven and Earth,<br/>To secure life and fortune for the people,<br/>To continue lost teachings for past sages,<br/>To establish peace for all future generations.</p>
-						<!--
-							<li class="rotate-out rotated"><label>Name</label><span>Anderson smith</span></li>                     
-							<li class="rotate-out rotated"><label>Address</label><span>Melbourne Victoria 3000 Australia</span></li>
-							<li class="rotate-out rotated"><label>Email</label><span>nurealamsabbir@authlab.io</span></li>  
-							<li class="rotate-out rotated"><label>Phone</label><span>+8801979791001</span></li>
-						-->
 						</ul><!--/ul.personal-info-->
 					</div>
 				</li><!--/#home-->
@@ -150,7 +144,7 @@
 				<li id="resume" class="hidden">
 					<div class="title-container">
 						<div class="shadow-img"></div>
-						<h2 class="rotate-out rotated"><span class="invert">Resume Of</span> John Doe</h2> <!--RESUME TITLE-->
+						<h2 class="rotate-out rotated"><span class="invert">Resume Of</span> Jiawen Zhang</h2> <!--RESUME TITLE-->
 					</div>
 					<div class="description">
 
@@ -164,29 +158,29 @@
 
 							<!--RESUME FIRST TAB/SKILL TAB DETAILS-->
 							<div id='tab-1'>
-								<h3 class="title">OUR SKILLS</h3><!--SKILLS WITH BAR DISPLAY-->
+								<h3 class="title">My SKILLS</h3><!--SKILLS WITH BAR DISPLAY-->
 								<ul class="skills-list no-padding">
 									<li class="row">
-										<div class="col-xs-2"><div class="fw-mid">HTML</div></div>
+										<div class="col-xs-2"><div class="fw-mid">C++</div></div>
 										<div class="col-xs-9">
 											<div class="bar">
-												<div class="percentage" id="bar1" style="width: 58%;"></div>
+												<div class="percentage" id="bar1" style="width: 90%;"></div>
 											</div>
 										</div>
 									</li>
 									<li class="row">
-										<div class="col-xs-2"><div class="fw-mid">CSS</div></div>
+										<div class="col-xs-2"><div class="fw-mid">iOS</div></div>
 										<div class="col-xs-9">
 											<div class="bar">
-												<div class="percentage" id="bar2" style="width: 75%;"></div>
+												<div class="percentage" id="bar2" style="width: 85%;"></div>
 											</div>
 										</div>
 									</li>
 									<li class="row">
-										<div class="col-xs-2"><div class="fw-mid">Javascript</div></div>
+										<div class="col-xs-2"><div class="fw-mid">Web</div></div>
 										<div class="col-xs-9">
 											<div class="bar">
-												<div class="percentage" id="bar3" style="width: 85%;"></div>
+												<div class="percentage" id="bar3" style="width: 75%;"></div>
 											</div>
 										</div>
 									</li>
@@ -200,19 +194,19 @@
 											<div class="circle-bar" id="line-container1">
 												<div class="progressbar-text" id="progress-text1">0</div>
 											</div>
-											<h5>Photoshop</h5>
+											<h5>AI/Python/Matlab</h5>
 										</div>
 										<div class="col-xs-4 center-align">
 											<div class="circle-bar" id="line-container2">
 												<div class="progressbar-text" id="progress-text2">0</div>
 											</div>
-											<h5>Illustrator</h5>
+											<h5>Robotics</h5>
 										</div>
 										<div class="col-xs-4 center-align">
 											<div class="circle-bar" id="line-container3">
 												<div class="progressbar-text" id="progress-text3">0</div>
 											</div>
-											<h5>After effect</h5>
+											<h5>Information Security</h5>
 										</div>
 									</div>
 								</div><!--SKILLS WITH CIRCLE DISPLAY ENDS-->
