--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <head>
 <!-- Basic Page Needs
 ================================================== -->
-<title>Jiawen Zhang</title>
+<title>JZ Personal Website</title>
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="description" content="JZ Personal websites">
@@ -55,9 +55,8 @@
 		//var sUserAgent = navigator.userAgent.toLowerCase();
 		try{
 			if (/(Android|webOS|iPhone|iPod|iPad|iOS|BlackBerry)/i.test(navigator.userAgent)) {
-				console.log(navigator.userAgent);
+			
 			}else{
-				console.log(navigator.userAgent);
 				element = document.getElementById("click");
 				element.src = "images/click.png";
 			}
@@ -218,33 +217,24 @@
 								<ul class="education-class">
 									<li>
 										<!--EDUCATION LIST ITEM-->
-										<h4 class="title">MSc in Computer Sciene<i class="fa fa-sort-desc pull-right"></i></h4>
+										<h4 class="title">Bachelor's degree, Computer Sciene<i class="fa fa-sort-desc pull-right"></i></h4>
 										<div class="list-content">
-											<h5 class="title">Consectetur adipiscing <span class="list-year">(2014 - 2005)</span></h5>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing Vivamus sit Vivamus sit. Vivamus sit.. consectetur adipiscing Vivamus sit. Vivamus sit</p><!--EDUCATION LIST DETAILS-->
+											<h5 class="title">University of Waterloo <span class="list-year">(2016 - 2020)</span></h5>
+											<p>This is the last year of my BCS degree at the University of Waterloo. In the past three years, 
+												I took several essential CS courses such as Data Structure, Algorithm, Computer System, etc. 
+												In addition, I took a few CS courses in a variety of professional fields like Aritifical Intelligence, 
+												Computer Security, Database Management and so on. The reason why I didn't study in depth in one
+												specific research area is to discover my most interested research direction in the future career.
+												Eventually, I intend to create an AI-enabled software vulnerabilities scanner for automatically 
+												scanning source code to protect users’ privacy and confidentiality.
+											</p><!--EDUCATION LIST DETAILS-->
 										</div>
 									</li>
 									<li>
 										<!--EDUCATION LIST ITEM-->
-										<h4 class="title">Grad At Computer Engineering<i class="fa fa-sort-desc pull-right"></i></h4>
+										<h4 class="title">High School<i class="fa fa-sort-desc pull-right"></i></h4>
 										<div class="list-content current">
-											<h5 class="title">Consectetur adipiscing <span class="list-year">(2014 - 2005)</span></h5>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing Vivamus sit Vivamus sit. Vivamus sit.. consectetur adipiscing Vivamus sit. Vivamus sit</p><!--EDUCATION LIST DETAILS-->
-										</div>
-									</li>
-									<li>
-										<!--EDUCATION LIST ITEM-->
-										<h4 class="title">College<i class="fa fa-sort-desc pull-right"></i></h4>
-										<div class="list-content">
-											<h5 class="title">Consectetur adipiscing <span class="list-year">(2014 - 2005)</span></h5>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing Vivamus sit Vivamus sit. Vivamus sit.. consectetur adipiscing Vivamus sit. Vivamus sit</p><!--EDUCATION LIST DETAILS-->
-										</div>
-									</li>
-									<li>
-										<!--EDUCATION LIST ITEM-->
-										<h4 class="title">Schools<i class="fa fa-sort-desc pull-right"></i></h4>
-										<div class="list-content">
-											<h5 class="title">Consectetur adipiscing <span class="list-year">(2014 - 2005)</span></h5>
+											<h5 class="title">High School Attached to NWPU <span class="list-year">(2013 - 2016)</span></h5>
 											<p>Lorem ipsum dolor sit amet, consectetur adipiscing Vivamus sit Vivamus sit. Vivamus sit.. consectetur adipiscing Vivamus sit. Vivamus sit</p><!--EDUCATION LIST DETAILS-->
 										</div>
 									</li>
