--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 							<ul class='horizontal no-padding'>
 								<li><a href="#tab-1" class="icon-bg icon-skills"><div>Skills</div></a></li>
 								<li><a href="#tab-2" class="icon-bg icon-education"><div>Educations</div></a></li>
-								<li><a href="#tab-3" class="icon-bg icon-employment"><div>Employment</div></a></li>
+								<li><a href="#tab-3" class="icon-bg icon-employment"><div>Experience</div></a></li>
 							</ul><!--RESUME TAB LISTS ENDS-->
 
 							<!--RESUME FIRST TAB/SKILL TAB DETAILS-->
@@ -193,7 +193,8 @@
 											<div class="circle-bar" id="line-container1">
 												<div class="progressbar-text" id="progress-text1">0</div>
 											</div>
-											<h5>AI/Python/Matlab</h5>
+											<h5>AI/Python/
+												Matlab</h5>
 										</div>
 										<div class="col-xs-4 center-align">
 											<div class="circle-bar" id="line-container2">
@@ -235,21 +236,29 @@
 										<!--EDUCATION LIST ITEM-->
 										<h4 class="title">High School<i class="fa fa-sort-desc pull-right"></i></h4>
 										<div class="list-content current">
-											<h5 class="title">High School Attached to NWPU <span class="list-year">(2013 - 2016)</span></h5>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing Vivamus sit Vivamus sit. Vivamus sit.. consectetur adipiscing Vivamus sit. Vivamus sit</p><!--EDUCATION LIST DETAILS-->
+											<h5 class="title">The NPU High School (西工大附中)<span class="list-year">(2013 - 2016)</span></h5>
+											<p>The high school located in my hometown, and it is the top 10 high school in China. In high school,
+												I continued working on robotics competitions like what I was doing in middle school. In addition, 
+												I started to mentor the soccer and VEX robotics competition teams; moreover, I found the first FRC 
+												team in the Northwestern China. I acquired knowledge from not only the coursework but also the experience 
+												in robotic area; this experience established my interests in CS and it has influenced my choice of undergraduate program.
+											</p><!--EDUCATION LIST DETAILS-->
 										</div>
 									</li>
 								</ul>
 							</div><!--RESUME SECOND TAB/EDUCATION TAB DETAILS ENDS-->
-							<!--RESUME THIRD TAB/EMPLYMENT TAB DETAILS ENDS-->
+							<!--RESUME THIRD TAB/EMPLOYMENT TAB DETAILS ENDS-->
 							<div id='tab-3'>
-								<h3 class="title">EMPLOYMENT</h3>
+								<h3 class="title">Experience</h3>
 								<ul class="employment-class tab-cont">
 									<li>
 										<!--EMPLOYMENT INDIVIDUAL LIST-->
-										<h4>Manager <span class="year">2014 - 2005</span></h4>
-										<h5>Consectetur adipiscing</h5>
-										<p>Lorem ipsum dolor sit amet, consectetur adipiscing Vivamus sit Vivamus sit. Vivamus sit.. consectetur adipiscing Vivamus sit.</p><!--EMPLOYMENT LIST DETAILS-->
+										<h4>C# Developer Intern</h4>
+										<h5>ChinaSoft International</h5>
+										<h6><div class="year">May 2019 - Aug 2019</div></h6>
+										<p>Working for Mingyuanyun (China's leading real estate ecological chain service provider);
+											mainly working on the costing system using C#.Net & MSSQL.
+											<br> Developing new components according to customers' changing requirements.</p><!--EMPLOYMENT LIST DETAILS-->
 									</li>
 									<li>
 										<!--EMPLOYMENT INDIVIDUAL LIST-->
