--- a/index.html
+++ b/index.html
@@ -257,20 +257,27 @@
 										<h5>ChinaSoft International</h5>
 										<h6><div class="year">May 2019 - Aug 2019</div></h6>
 										<p>Working for Mingyuanyun (China's leading real estate ecological chain service provider);
-											mainly working on the costing system using C#.Net & MSSQL.
-											<br> Developing new components according to customers' changing requirements.</p><!--EMPLOYMENT LIST DETAILS-->
+											mainly working on the costing system using C#.Net & MSSQL.<br>
+											Developing new components according to customers' changing requirements.</p><!--EMPLOYMENT LIST DETAILS-->
 									</li>
 									<li>
 										<!--EMPLOYMENT INDIVIDUAL LIST-->
-										<h4>Manager <span class="year">2014 - 2005</span></h4>
-										<h5>Consectetur adipiscing</h5>
-										<p>Lorem ipsum dolor sit amet, consectetur adipiscing Vivamus sit Vivamus sit. Vivamus sit.. consectetur adipiscing Vivamus sit.</p><!--EMPLOYMENT LIST DETAILS-->
+										<h4>Robotics and Software Engineer Intern</h4>
+										<h5>Roboterra, Inc</h5>
+										<h6><div class="year">Jul 2016 - Sep 2016</div></h6>
+										<p>Designed and built around 20 kinds of robots for robotics education.<br>
+												Complied robotics teaching materials for thousands of middle school students.<br>
+												Built robot demos for the company to display at a trade fair.
+												</p><!--EMPLOYMENT LIST DETAILS-->
 									</li>
 									<li>
 										<!--EMPLOYMENT INDIVIDUAL LIST-->
-										<h4>Manager <span class="year">2014 - 2005</span></h4>
-										<h5>Consectetur adipiscing</h5>
-										<p>Lorem ipsum dolor sit amet, consectetur adipiscing Vivamus sit Vivamus sit. Vivamus sit.. consectetur adipiscing Vivamus sit.</p><!--EMPLOYMENT LIST DETAILS-->
+										<h4>Co-Founder & Team Leader of Team 6227</h4>
+										<h5>First</h5>
+										<h6><div class="year">Nov 2015 - May 2016</div></h6>
+										<p>Led team to participate in FRC (First Robotics Competition) and received 2016 Rookie Inspiration Award.<br>
+											Established the first FRC robotics competition team in Northwestern China.<br>
+											Instructed the team to design and build a robot. Worked for mechanical and electronic parts, as well as the robot driver.</p><!--EMPLOYMENT LIST DETAILS-->
 									</li>
 								</ul>
 							</div><!--RESUME THIRD TAB/EMPLYMENT TAB DETAILS ENDS-->
