--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
 									<li>
 										<!--EMPLOYMENT INDIVIDUAL LIST-->
 										<h4>Co-Founder & Team Leader of Team 6227</h4>
-										<h5>First</h5>
+										<h5>FIRST</h5>
 										<h6><div class="year">Nov 2015 - May 2016</div></h6>
 										<p>Led team to participate in FRC (First Robotics Competition) and received 2016 Rookie Inspiration Award.<br>
 											Established the first FRC robotics competition team in Northwestern China.<br>
@@ -564,7 +564,9 @@
 <script type="text/javascript" src="js/progressbar.min.js"></script> <!-- JQUERY Progressbar Plugin-->
 <script type="text/javascript" src="js/jquery.simple-text-rotator.min.js"></script> <!-- JQUERY Text Rotator-->
 <script type="text/javascript" src="js/bootstrap.min.js"></script> <!-- Bootstrap file-->
+<!--
 <script src="http://ditu.google.cn/maps/api/js?key=AIzaSyBPNkCVoBW_Jzl6x-hgGU6e7QW1QMwKles"></script>
+-->
 <script type="text/javascript" src='js/isotope.pkgd.min.js'></script>
 <script type="text/javascript" src="js/custom.js"></script>
 </body>
