--- a/index.html
+++ b/index.html
@@ -104,7 +104,8 @@
 
 				<!--SOCIAL NAV MENU-->
 				<div class="social-menu-container">
-					<ul class="social-menu no-padding">                     
+					<ul class="social-menu no-padding">
+						<li><a href="https://jiawenzhang.top"><img src="images/blog.png" width="18px" height="18px" style="margin-top: 33%"></a></li>                     
 						<li><a href="https://www.facebook.com/100022309471579"><i class="fa fa-facebook"></i></a></li>
 						<li><a href="https://github.com/Jiawen-Zhang"><i class="fa fa-github"></i></a></li>
 						<li><a href="https://www.linkedin.com/in/jiawen-jack-zhang/"><i class="fa fa-linkedin"></i></a></li>
@@ -118,7 +119,7 @@
 				<li id="home" class="selected">
 					<div class="title-container hidden">
 						<div class="shadow-img"></div> 
-						<h2 class="rotate-out">Welcome To <span class="invert">My Personal Website</span></h2><!--HOME TITLE-->                          
+						<h2 class="rotate-out">Welcome To <span class="invert">JZ Personal Website</span></h2><!--HOME TITLE-->                          
 					</div>
 					<div class="description hidden">
 						<div class="watermark-home"></div> 
@@ -237,7 +238,7 @@
 										<h4 class="title">High School<i class="fa fa-sort-desc pull-right"></i></h4>
 										<div class="list-content current">
 											<h5 class="title">The NPU High School (西工大附中)<span class="list-year">(2013 - 2016)</span></h5>
-											<p>The high school located in my hometown, and it is the top 10 high school in China. In high school,
+											<p>The high school locates in my hometown, and it is the top 10 high school in China. In high school,
 												I continued working on robotics competitions like what I was doing in middle school. In addition, 
 												I started to mentor the soccer and VEX robotics competition teams; moreover, I found the first FRC 
 												team in the Northwestern China. I acquired knowledge from not only the coursework but also the experience 
@@ -258,17 +259,18 @@
 										<h6><div class="year">May 2019 - Aug 2019</div></h6>
 										<p>Working for Mingyuanyun (China's leading real estate ecological chain service provider);
 											mainly working on the costing system using C#.Net & MSSQL.<br>
-											Developing new components according to customers' changing requirements.</p><!--EMPLOYMENT LIST DETAILS-->
+											Developing new components according to customers' changing requirements.
+										</p><!--EMPLOYMENT LIST DETAILS-->
 									</li>
 									<li>
 										<!--EMPLOYMENT INDIVIDUAL LIST-->
 										<h4>Robotics and Software Engineer Intern</h4>
-										<h5>Roboterra, Inc</h5>
+										<h5>Roboterra, Inc.</h5>
 										<h6><div class="year">Jul 2016 - Sep 2016</div></h6>
 										<p>Designed and built around 20 kinds of robots for robotics education.<br>
 												Complied robotics teaching materials for thousands of middle school students.<br>
 												Built robot demos for the company to display at a trade fair.
-												</p><!--EMPLOYMENT LIST DETAILS-->
+										</p><!--EMPLOYMENT LIST DETAILS-->
 									</li>
 									<li>
 										<!--EMPLOYMENT INDIVIDUAL LIST-->
@@ -278,6 +280,28 @@
 										<p>Led team to participate in FRC (First Robotics Competition) and received 2016 Rookie Inspiration Award.<br>
 											Established the first FRC robotics competition team in Northwestern China.<br>
 											Instructed the team to design and build a robot. Worked for mechanical and electronic parts, as well as the robot driver.</p><!--EMPLOYMENT LIST DETAILS-->
+									</li>
+									<li>
+										<!--EMPLOYMENT INDIVIDUAL LIST-->
+										<h4>Team Leader & Mentor of VEX Robotics Team 8165</h4>
+										<h5>VEX Robotics, Inc.</h5>
+										<h6><div class="year">Oct 2013 - Jul 2015</div></h6>
+										<p>1 provincial-level award, 1 national-level award, 1 international-level award.<br> 
+											Designed and build robots for 2 VEX Robotics competitions; worked as robot drivers.<br>
+											Started coaching a VEX team in 2015 and led the team to get the first prize in the 
+											provincial competition and the second prize in the national competition.
+										</p><!--EMPLOYMENT LIST DETAILS-->
+									</li>
+									<li>
+										<!--EMPLOYMENT INDIVIDUAL LIST-->
+										<h4>Team Leader & Mentor of Robotics Soccer Development Team</h4>
+										<h5>The Middle School Attached to Northwestern Polytechnical University</h5>
+										<h6><div class="year">Apr 2011 - Jul 2015</div></h6>
+										<p>7 provincial-level awards, 5 national-level awards.<br>
+											Designed, built and optimized robotics soccer players and participated in robotics soccer games yearly.<br>
+											Having rich experience in robotics competitions. Working as a team mentor from 2014, and the coached 
+											team got several awards in both provisional and national-level awards.
+										</p><!--EMPLOYMENT LIST DETAILS-->
 									</li>
 								</ul>
 							</div><!--RESUME THIRD TAB/EMPLYMENT TAB DETAILS ENDS-->
@@ -289,7 +313,7 @@
 				<li id="portfolio" class="hidden">
 					<div class="title-container">
 						<div class="shadow-img"></div>
-						<h2 class="rotate-out rotated">Portfolio</h2> <!--PORTFOLIO TITLE-->                         
+						<h2 class="rotate-out rotated">Projects</h2> <!--PORTFOLIO TITLE-->                         
 					</div>
 
 					<!--PORTFOLIO CATEGORY LIST-->    
@@ -320,7 +344,7 @@
 										<div class="mask"></div>
 										<div class="content">
 											<h2>Hover Style #2</h2><!--PORTFOLIO INDIVIDAUAL ITEM TITLE-->                                  
-											<a role="button" class="info" data-toggle="modal" data-target="#myModal2">Read More</a><!--PORTFOLIO INDIVIDAUAL ITEM MODAL LINK BY 'data-target'-->
+											<a role="button" class="info" data-toggle="modal" data-target="#myModal">Read More</a><!--PORTFOLIO INDIVIDAUAL ITEM MODAL LINK BY 'data-target'-->
 										</div>
 									</li>
 									<li class="view view-tenth photography"> <!--PORTFOLIO INDIVIDAUAL ITEM--> 
@@ -437,6 +461,7 @@
 				<!--SOCIAL NAV FOR MOBILE-->
 				<ul class="mobile-social no-padding">
 					<li>Connect With Me</li>
+					<li><a href="https://jiawenzhang.top"><img src="images/blog.png" width="15px" height="15px" style="margin-bottom: 5px"></a></li>
 					<li><a href="https://www.facebook.com/100022309471579"><i class="fa fa-facebook"></i></a></li>
 					<li><a href="https://github.com/Jiawen-Zhang"><i class="fa fa-github"></i></a></li>
 					<li><a href="https://www.linkedin.com/in/jiawen-jack-zhang/"><i class="fa fa-linkedin"></i></a></li>
@@ -456,13 +481,19 @@
 				<h4 class="modal-title" id="myModalLabel">Modal title</h4><!--PORTFOLIO IMAGE TITLE-->
 			</div>
 			<div class="modal-body">
-				<img src="images/folio/logs.jpg" class="img-responsive" alt="modal-image"><!--PORTFOLIO MODAL IMAGE-->
+				<!--
+				<img src="images/folio/logs.jpg" class="img-responsive" alt="modal-image"> --><!--PORTFOLIO MODAL IMAGE-->
+				<div class="mf-content">
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis temporibus fuga sit explicabo blanditiis voluptate iste vero quia impedit? Iusto illo voluptas est praesentium veritatis magni, pariatur laboriosam voluptatem inventore.</p>
+					</div>
 			</div>
+			<!--
 			<div class="modal-footer">
 				<div class="mf-content">
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis temporibus fuga sit explicabo blanditiis voluptate iste vero quia impedit? Iusto illo voluptas est praesentium veritatis magni, pariatur laboriosam voluptatem inventore.</p>
 				</div>                      
 			</div>
+			-->
 		</div><!-- /.modal-content -->
 	</div><!-- /.modal-dialog -->
 </div><!-- /.modal -->
