test mobile touch on AWS

--- a/index.html
+++ b/index.html
@@ -339,11 +339,12 @@
 											<a role="button" class="info" data-toggle="modal" data-target="#myModal">Read More</a><!--PORTFOLIO INDIVIDAUAL ITEM MODAL LINK BY 'data-target'-->
 										 </div>  
 									</li>  
-									<li class="view view-second commercial"><!--PORTFOLIO INDIVIDAUAL ITEM-->
+									<li class="view view-first commercial"><!--PORTFOLIO INDIVIDAUAL ITEM-->
 									  <img src="images/folio/book.jpg" alt="book" /><!--PORTFOLIO INDIVIDAUAL ITEM IMAGE--> 
-										<div class="mask"></div>
-										<div class="content">
-											<h2>Hover Style #2</h2><!--PORTFOLIO INDIVIDAUAL ITEM TITLE-->                                  
+										
+										<div class="mask">  
+											<h2>Hover Style #2</h2> <!--PORTFOLIO INDIVIDAUAL ITEM TITLE-->                               
+											   <!-- Button trigger modal -->
 											<a role="button" class="info" data-toggle="modal" data-target="#myModal">Read More</a><!--PORTFOLIO INDIVIDAUAL ITEM MODAL LINK BY 'data-target'-->
 										</div>
 									</li>
