--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 				<li id="resume" class="hidden">
 					<div class="title-container">
 						<div class="shadow-img"></div>
-						<h2 class="rotate-out rotated"><span class="invert">Resume Of</span> Jiawen Zhang</h2> <!--RESUME TITLE-->
+						<h2 class="rotate-out rotated"><span class="invert">Resume of</span> Jiawen Zhang</h2> <!--RESUME TITLE-->
 					</div>
 					<div class="description">
 
@@ -312,8 +312,8 @@
 				<!--PORTFOLIO PAGE-->
 				<li id="portfolio" class="hidden">
 					<div class="title-container">
-						<div class="shadow-img"></div>
-						<h2 class="rotate-out rotated">Projects</h2> <!--PORTFOLIO TITLE-->                         
+						<div class="shadow-img"></div> 
+						<h2 class="rotate-out rotated"><span class="invert">Projects of</span> Jiawen Zhang</h2> <!--PROJECTS TITLE-->                      
 					</div>
 
 					<!--PORTFOLIO CATEGORY LIST-->    
@@ -412,7 +412,8 @@
 				<li id="contact" class="hidden">
 					<div class="title-container" >
 						<div class="shadow-img"></div>               
-					   <h2 class="rotate-out rotated">Contact Info</h2><!--CONTACT PAGE TITLE-->
+					   <h2 class="rotate-out rotated"><span class="invert">Contact Info of</span> Jiawen Zhang</h2> <!--CONTACT INFO TITLE-->  
+
 					</div>
 					<div class="description">                           
 						<div class="row">
