--- a/index.html
+++ b/index.html
@@ -426,6 +426,8 @@
 								<!--/CONTACT DESCRIPTION ENDS-->
 							</div>
 
+							<img id="contact-img" class="watermark-contact" src="images/contact.png" alt="contact-image"><!--PROFILE IMAGE-->
+
 					</div>
 				</li><!--/#contact-->
 			</ul> 
