--- a/index.html
+++ b/index.html
@@ -463,7 +463,8 @@
 							Real-time status of the four main parking lots; acquiring recommended parking 
 							lots when searching your destination; detail information of each parking lot; 
 							records your car location and notices you before time up, etc.<br>
-							Currently, I am working on NLP research to develop a new feature for Voice Control.
+							Currently, I am working on NLP research to develop a new feature for Voice Control;
+							researching privacy-preserving technologies for LBS.
 						</p>
 					</div>
 			</div>
@@ -513,8 +514,8 @@
 							<p>Text categorization is an important task in natural language processing and information retrieval. 
 								For instance, news articles, emails or blogs are often classified by topics.<br>
 								I Implemented two classifiers using both Decision Tree and Bayesian Network. I trained models first 
-								and used the trained models to process classifying, the accuracy can reach up to 88.97%.<br>
-								Optimized using the sparse matrix which mad the process hundreds of times faster than the naive algorithm.
+								and used the trained models to process classifying; the accuracy can reach up to 88.97%.<br>
+								They were optimized using the sparse matrix which mad the process hundreds of times faster than the naive algorithm.
 							</p>
 						</div>
 				</div>
