update HOME page

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 							<!--DESCRIPTION ON HOME-->
 							<div class="strong-text">Hello, I am <span>Jiawen (Jack) Zhang</span></div>
 							<div class="focus-text"><span>4<sup>th</sup> year CS Student at the University of Waterloo</span></div>
-							<p class="large-paragraph">I am interested in fancy technology and willing to learn new stuff. I constantly keep an eye on the latest tech-info and closely follow the trend of its development, so as to renew my knowledge; because in this field, not to advance is to go back. Besides programming, I have rich experience in adolescent robotics competitions, so I know the robotics education marketing very well.</p>         
+							<p class="large-paragraph">I have solid combination of theoretical and practical computer science skills. I am interested in cutting-edge technology and willing to learn new stuff. I constantly keep an eye on the latest tech-info and closely follow the trend of its development, so as to renew my knowledge. I also enjoy solving real-world problems with emerging technologies. Besides programming, I have rich experience in adolescent robotics competitions, so I know the robotics education marketing very well. </p>         
 							<!--DESCRIPTION ON HOME ENDS-->
 						</div>
 
