--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
 								<h3 class="title">My SKILLS</h3><!--SKILLS WITH BAR DISPLAY-->
 								<ul class="skills-list no-padding">
 									<li class="row">
-										<div class="col-xs-2"><div class="fw-mid">C++</div></div>
+										<div class="col-xs-2"><div class="fw-mid">C/C++</div></div>
 										<div class="col-xs-9">
 											<div class="bar">
 												<div class="percentage" id="bar1" style="width: 90%;"></div>
@@ -169,7 +169,7 @@
 										</div>
 									</li>
 									<li class="row">
-										<div class="col-xs-2"><div class="fw-mid">iOS</div></div>
+										<div class="col-xs-2"><div class="fw-mid">iOS/Swift</div></div>
 										<div class="col-xs-9">
 											<div class="bar">
 												<div class="percentage" id="bar2" style="width: 85%;"></div>
@@ -413,7 +413,7 @@
 									<li class="view view-first photography"> <!--PORTFOLIO INDIVIDAUAL ITEM--> 
 										<img src="images/folio/eight.jpeg" alt="eight" /> <!--PORTFOLIO INDIVIDAUAL ITEM IMAGE-->
 											<div class="mask">  
-												<h2>#0</h2> <!--PORTFOLIO INDIVIDAUAL ITEM TITLE--> 
+												<h2>#8</h2> <!--PORTFOLIO INDIVIDAUAL ITEM TITLE--> 
 													<!-- Button trigger modal -->                              
 												<a role="button" class="info" data-toggle="modal" data-target="#myModal8">Read More</a>
 										    </div>  
@@ -489,7 +489,7 @@
 	</div><!-- /.modal-dialog -->
 </div><!-- /.modal -->
 
-<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel1" aria-hidden="true">
+<div class="modal fade" id="myModal1" tabindex="-1" role="dialog" aria-labelledby="myModalLabel1" aria-hidden="true">
 	<div class="modal-dialog">
 		<div class="modal-content">
 			<div class="modal-header">
@@ -514,7 +514,7 @@
 	</div><!-- /.modal-dialog -->
 </div><!-- /.modal -->
 
-<div class="modal fade" id="myModal1" tabindex="-1" role="dialog" aria-labelledby="myModalLabel2" aria-hidden="true">
+<div class="modal fade" id="myModal2" tabindex="-1" role="dialog" aria-labelledby="myModalLabel2" aria-hidden="true">
 		<div class="modal-dialog">
 			<div class="modal-content">
 				<div class="modal-header">
@@ -544,7 +544,7 @@
 		</div><!-- /.modal-dialog -->
 </div><!-- /.modal -->
 
-<div class="modal fade" id="myModal2" tabindex="-1" role="dialog" aria-labelledby="myModalLabel3" aria-hidden="true">
+<div class="modal fade" id="myModal3" tabindex="-1" role="dialog" aria-labelledby="myModalLabel3" aria-hidden="true">
 		<div class="modal-dialog">
 			<div class="modal-content">
 				<div class="modal-header">
@@ -565,7 +565,7 @@
 		</div><!-- /.modal-dialog -->
 </div><!-- /.modal -->
 
-<div class="modal fade" id="myModal3" tabindex="-1" role="dialog" aria-labelledby="myModalLabel4" aria-hidden="true">
+<div class="modal fade" id="myModal4" tabindex="-1" role="dialog" aria-labelledby="myModalLabel4" aria-hidden="true">
 		<div class="modal-dialog">
 			<div class="modal-content">
 				<div class="modal-header">
@@ -589,7 +589,7 @@
 		</div><!-- /.modal-dialog -->
 </div><!-- /.modal -->
 
-<div class="modal fade" id="myModal4" tabindex="-1" role="dialog" aria-labelledby="myModalLabel5" aria-hidden="true">
+<div class="modal fade" id="myModal5" tabindex="-1" role="dialog" aria-labelledby="myModalLabel5" aria-hidden="true">
 		<div class="modal-dialog">
 			<div class="modal-content">
 				<div class="modal-header">
@@ -610,7 +610,7 @@
 		</div><!-- /.modal-dialog -->
 </div><!-- /.modal -->
 
-<div class="modal fade" id="myModal5" tabindex="-1" role="dialog" aria-labelledby="myModalLabel6" aria-hidden="true">
+<div class="modal fade" id="myModal6" tabindex="-1" role="dialog" aria-labelledby="myModalLabel6" aria-hidden="true">
 		<div class="modal-dialog">
 			<div class="modal-content">
 				<div class="modal-header">
@@ -628,7 +628,7 @@
 		</div><!-- /.modal-dialog -->
 </div><!-- /.modal -->
 
-<div class="modal fade" id="myModal6" tabindex="-1" role="dialog" aria-labelledby="myModalLabel7" aria-hidden="true">
+<div class="modal fade" id="myModal7" tabindex="-1" role="dialog" aria-labelledby="myModalLabel7" aria-hidden="true">
 		<div class="modal-dialog">
 			<div class="modal-content">
 				<div class="modal-header">
@@ -646,7 +646,7 @@
 		</div><!-- /.modal-dialog -->
 </div><!-- /.modal -->
 
-<div class="modal fade" id="myModal7" tabindex="-1" role="dialog" aria-labelledby="myModalLabel8" aria-hidden="true">
+<div class="modal fade" id="myModal8" tabindex="-1" role="dialog" aria-labelledby="myModalLabel8" aria-hidden="true">
 		<div class="modal-dialog">
 			<div class="modal-content">
 				<div class="modal-header">
