Update Home/Resume/Project/Contact pages

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 	<div class="shadow-img"></div> 
 	<img src="images/front-image.jpg" class="front-img img-responsive" alt ="Front-image"><!--IMAGE FOR FRONT SCREEN-->
 	<h1>Jack <span class="invert">Zhang</span></h1><!--PROFILE NAME-->
-	<h3 class="invert" style="margin-top: -10px; margin-bottom: 10px;"><span class="rotate">UW CS Student,Software Engineer,Robotics Engineer</span></h3> <!--SUBTITLE IN PROFILE-->
+	<h3 class="invert" style="margin-top: -10px; margin-bottom: 10px;"><span class="rotate">SFU MSc Student,UW Honours CS Bachelor,Cybersecurity Specialist,Software Engineer,Robotics Engineer</span></h3> <!--SUBTITLE IN PROFILE-->
 	<div class="frontclick"><img id="click" alt="" class="img-responsive"><span class="pulse"></span></div>
 	<!--Click on PC-->
 	<script type="text/javascript">
@@ -76,7 +76,7 @@
 				<div class="shadow-img"></div>
 				<h1 class="maintitle">Jiawen (Jack) <span class="invert">Zhang</span></h1><!--PROFILE NAME-->
 				<h3 class="invert sub-maintitle"> 
-					<span class="rotate">UW CS Student,Software Engineer,Robotics Engineer</span><!--SUBTITLE AFTET NAME-->
+					<span class="rotate">SFU MSc Student,UW Honours CS,Cybersecurity Specialist,Software Engineer,Robotics Engineer</span><!--SUBTITLE AFTET NAME-->
 				</h3>
 				<img id="profile-img" class="profile-img transparent" src="images/profile-thum.png" alt="profile-image"><!--PROFILE IMAGE-->
 			</div><!--/#namecard-->
@@ -127,15 +127,15 @@
 						<div class="fade-text transparent">
 							<!--DESCRIPTION ON HOME-->
 							<div class="strong-text">Hello, I am <span>Jiawen (Jack) Zhang</span></div>
-							<div class="focus-text"><span>4<sup>th</sup> year CS Student at the University of Waterloo</span></div>
-							<p class="large-paragraph">I have solid combination of theoretical and practical computer science skills. I am interested in cutting-edge technology and willing to learn new stuff. I constantly keep an eye on the latest tech-info and closely follow the trend of its development, so as to renew my knowledge. I also enjoy solving real-world problems with emerging technologies. Besides programming, I have rich experience in adolescent robotics competitions, so I know the robotics education marketing very well. </p>         
+							<div class="focus-text"><span>MSc Student in Computer Science at Simon Fraser University</span></div>
+							<p class="large-paragraph">My research interests lie in Cybersecurity and Cryptography. I am proficient in Penetration Testing and Ethical Hacking. I recently graduated from the University of Waterloo in Canada with an Honours Bachelor's degree in Computer Science. I am bringing with me a solid combination of theoretical and practical knowledge in computer science, and a strong willingness to continuously adapt cutting-edge technologies. Besides programming, I have rich experience in adolescent robotics competitions, so I know the robotics education marketing very well. My multicultural background and proficiency with both English and Mandarin would also be useful for any possible international projects. </p>         
 							<!--DESCRIPTION ON HOME ENDS-->
 						</div>
 
 						<!--ALL PERSONAL DETAILS-->
 						<h3 class="personal-info-title title">Life Motto</h3>
 						<ul class="personal-info">
-							<p class="large-paragraph" style="margin-top: -10px">To ordain conscience for Heaven and Earth,<br/>To secure life and fortune for the people,<br/>To continue lost teachings for past sages,<br/>To establish peace for all future generations.</p>
+							<p class="large-paragraph" style="margin-top: -10px">为天地立心 To ordain conscience for Heaven and Earth,<br/>为生民立命 To secure life and fortune for the people,<br/>为往圣继绝学 To continue lost teachings for past sages,<br/>为万世开太平 To establish peace for all future generations.</p>
 						</ul><!--/ul.personal-info-->
 					</div>
 				</li><!--/#home-->
@@ -158,10 +158,10 @@
 
 							<!--RESUME FIRST TAB/SKILL TAB DETAILS-->
 							<div id='tab-1'>
-								<h3 class="title">My SKILLS</h3><!--SKILLS WITH BAR DISPLAY-->
+								<h3 class="title">PROGRAMMING LANGUAGES</h3><!--SKILLS WITH BAR DISPLAY-->
 								<ul class="skills-list no-padding">
 									<li class="row">
-										<div class="col-xs-2"><div class="fw-mid">C/C++</div></div>
+										<div class="col-xs-3"><div class="fw-mid">Java/C/C++/C#</div></div>
 										<div class="col-xs-9">
 											<div class="bar">
 												<div class="percentage" id="bar1" style="width: 90%;"></div>
@@ -169,18 +169,18 @@
 										</div>
 									</li>
 									<li class="row">
-										<div class="col-xs-2"><div class="fw-mid">iOS/Swift</div></div>
+										<div class="col-xs-3"><div class="fw-mid">Python/Shell/SQL</div></div>
 										<div class="col-xs-9">
 											<div class="bar">
-												<div class="percentage" id="bar2" style="width: 85%;"></div>
+												<div class="percentage" id="bar2" style="width: 90%;"></div>
 											</div>
 										</div>
 									</li>
 									<li class="row">
-										<div class="col-xs-2"><div class="fw-mid">Web</div></div>
+										<div class="col-xs-3"><div class="fw-mid">Swift/Kotlin/Scala</div></div>
 										<div class="col-xs-9">
 											<div class="bar">
-												<div class="percentage" id="bar3" style="width: 75%;"></div>
+												<div class="percentage" id="bar3" style="width: 85%;"></div>
 											</div>
 										</div>
 									</li>
@@ -194,20 +194,23 @@
 											<div class="circle-bar" id="line-container1">
 												<div class="progressbar-text" id="progress-text1">0</div>
 											</div>
-											<h5>AI/Python/
-												Matlab</h5>
+											<h5>Cybersecurity/
+												Pen Test/
+												Hacking
+											</h5>
 										</div>
 										<div class="col-xs-4 center-align">
 											<div class="circle-bar" id="line-container2">
 												<div class="progressbar-text" id="progress-text2">0</div>
 											</div>
-											<h5>Robotics</h5>
+											<h5>Artificial Intelligence/
+												Machine Learning</h5>
 										</div>
 										<div class="col-xs-4 center-align">
 											<div class="circle-bar" id="line-container3">
 												<div class="progressbar-text" id="progress-text3">0</div>
 											</div>
-											<h5>Information Security</h5>
+											<h5>Robotics</h5>
 										</div>
 									</div>
 								</div><!--SKILLS WITH CIRCLE DISPLAY ENDS-->
@@ -217,25 +220,38 @@
 							<div id='tab-2'>
 								<h3 class="title">EDUCATIONS</h3>
 								<ul class="education-class">
+
 									<li>
 										<!--EDUCATION LIST ITEM-->
-										<h4 class="title">Bachelor's degree, Computer Sciene<i class="fa fa-sort-desc pull-right"></i></h4>
+										<h4 class="title">Master's degree, Computer Sciene, SFU<i class="fa fa-sort-desc pull-right"></i></h4>
 										<div class="list-content">
-											<h5 class="title">University of Waterloo <span class="list-year">(2016 - 2020)</span></h5>
-											<p>This is the last year of my BCS degree at the University of Waterloo. In the past three years, 
-												I took several essential CS courses such as Data Structure, Algorithm, Computer System, etc. 
-												In addition, I took a few CS courses in a variety of professional fields like Aritifical Intelligence, 
-												Computer Security, Database Management and so on. The reason why I didn't study in depth in one
-												specific research area is to discover my most interested research direction in the future career.
-												Eventually, I intend to create an AI-enabled software vulnerabilities scanner for automatically 
-												scanning source code to protect users’ privacy and confidentiality.
+											<h5 class="title">University of Waterloo <span class="list-year">(2020 - Present)</span></h5>
+											<p>I started my journal at Simon Fraser University as Master's student in September, 2020.
+												My research interests lie in Cybersecurity and Cryptography. I am proficient in Penetration
+												Testing and Ethical Hacking. I am building my skils in the field of Cyber Security.
 											</p><!--EDUCATION LIST DETAILS-->
 										</div>
 									</li>
 
 									<li>
 										<!--EDUCATION LIST ITEM-->
-										<h4 class="title">High School<i class="fa fa-sort-desc pull-right"></i></h4>
+										<h4 class="title">Honours Bachelor's degree, Computer Sciene, UW<i class="fa fa-sort-desc pull-right"></i></h4>
+										<div class="list-content">
+											<h5 class="title">University of Waterloo <span class="list-year">(2016 - 2020)</span></h5>
+											<p>During my undergraduate study at the University of Waterloo. I took several essential CS courses 
+												such as Data Structure, Algorithm, Computer System, etc. In addition, I took a few CS courses 
+												in a variety of professional fields like Aritifical Intelligence, Computer Security, Database 
+												Management and so on. The reason why I didn't study in depth in one specific research area is 
+												to discover my most interested research direction in the future career. Eventually, I intend 
+												to create an AI-enabled software vulnerabilities scanner for automatically scanning source code 
+												to protect users’ privacy and confidentiality.
+											</p><!--EDUCATION LIST DETAILS-->
+										</div>
+									</li>
+
+									<li>
+										<!--EDUCATION LIST ITEM-->
+										<h4 class="title">High School, The NPU High School<i class="fa fa-sort-desc pull-right"></i></h4>
 										<div class="list-content current">
 											<h5 class="title">The NPU High School (西工大附中)<span class="list-year">(2013 - 2016)</span></h5>
 											<p>The high school locates in my hometown, and it is the top 10 high school in China. In high school,
@@ -252,14 +268,39 @@
 							<div id='tab-3'>
 								<h3 class="title">Experience</h3>
 								<ul class="employment-class tab-cont">
+
+									<li>
+										<!--EMPLOYMENT INDIVIDUAL LIST-->
+										<h4>IT Security Team Lead (Permanent Part-time)</h4>
+										<h5>ALba inc.</h5>
+										<h6><div class="year">Oct 2020 - Present</div></h6>
+										<p>Conducting penetration testing on the ERP system. Gathering vulnerabilities and generating report includes
+											detailed finding and mitigation solutions. Contributing to ERP development and providing IT supports.<br>
+											Responsible for designing, developing, and deploying Data Analytics to improve case transferability.
+										</p><!--EMPLOYMENT LIST DETAILS-->
+									</li>
+
+									<li>
+										<!--EMPLOYMENT INDIVIDUAL LIST-->
+										<h4>Graduate Teaching Assistant </h4>
+										<h5>Simon Fraser University</h5>
+										<h6><div class="year">Aug 2020 - Present</div></h6>
+										<p>Conducting tutorials and live Q&A sessions each week.<br>
+											Holding office hours and monitor an online discussion forum.<br>
+											Assisting the instructor in preparing and marking assignments and tests.
+										</p><!--EMPLOYMENT LIST DETAILS-->
+									</li>
+
 									<li>
 										<!--EMPLOYMENT INDIVIDUAL LIST-->
 										<h4>C# Developer Intern</h4>
 										<h5>ChinaSoft International</h5>
 										<h6><div class="year">May 2019 - Aug 2019</div></h6>
-										<p>Worked for Mingyuanyun (China's leading real estate ecological chain service provider);
-											mainly working on the costing system using C#.Net & MSSQL.<br>
-											Developed new components according to clients' changing requirements.
+										<p>Worked for Minyuanyun Project (Intelligent business solutions and management systems;
+											provider); mainly working on the costing component of ERP systems using C# and MS SQL.<br>
+											Responsible for the development of the new database structure and migrated the active
+											and archived case data from the current database. Translated marketing/business requirements 
+											into technical requirements.
 										</p><!--EMPLOYMENT LIST DETAILS-->
 									</li>
 									<li>
@@ -329,7 +370,7 @@
 					<!--PORTFOLIO CATEGORY LIST-->    
 					<div class="abs-child">
 						<ul class="button-group filters-button-group">
-							<li class="button is-checked" data-filter="*">Show All</li>
+							<li class="button is-checked" data-filter="*">SELECTED PROJECTS (NOT UP TO DATE)</li>
 						</ul><!--/.button-group filters-button-group-->
 					</div>
 					
@@ -440,8 +481,8 @@
 							<div class="col-lg-12">
 								<!--CONTACT DESCRIPTION-->
 								<!--<h3 class="title">Contact Info</h3>-->
-								<h6 class="sm-title" style="font-size: 16px"><span class="address-icon"><i class="fa fa-map-marker"></i></span>200 University Avenue West, Waterloo, ON, Canada N2L 3G1</h6>
-								<h6 class="sm-title" style="font-size: 16px; padding-top: 10px"><span class="address-icon"><i class="fa fa-envelope"></i></span>jzdevelopments@gmail.com</h6>
+								<h6 class="sm-title" style="font-size: 16px"><span class="address-icon"><i class="fa fa-map-marker"></i></span>8888 University Dr, Burnaby, BC, Canada V5A 1S6</h6>
+								<h6 class="sm-title" style="font-size: 16px; padding-top: 10px"><span class="address-icon"><i class="fa fa-envelope"></i></span>jzdevelopments &lt;at&gt; gmail &lt;dot&gt; com</h6>
 								<!--/CONTACT DESCRIPTION ENDS-->
 							</div>
 
