--- a/index.html
+++ b/index.html
@@ -226,9 +226,9 @@
 										<h4 class="title">Master's degree, Computer Sciene, SFU<i class="fa fa-sort-desc pull-right"></i></h4>
 										<div class="list-content">
 											<h5 class="title">University of Waterloo <span class="list-year">(2020 - Present)</span></h5>
-											<p>I started my journal at Simon Fraser University as Master's student in September, 2020.
+											<p>I started my journal at Simon Fraser University as a Master's student in September, 2020.
 												My research interests lie in Cybersecurity and Cryptography. I am proficient in Penetration
-												Testing and Ethical Hacking. I am building my skils in the field of Cyber Security.
+												Testing and Ethical Hacking. I am building my skills in the field of Cyber Security.
 											</p><!--EDUCATION LIST DETAILS-->
 										</div>
 									</li>
