Update style.css for mobile adaptive

--- a/index.html
+++ b/index.html
@@ -194,16 +194,16 @@
 											<div class="circle-bar" id="line-container1">
 												<div class="progressbar-text" id="progress-text1">0</div>
 											</div>
-											<h5>Cybersecurity/
-												Pen Test/
-												Hacking
+											<h5>Cybersecurity/ <br>
+												Pen Test/ <br>
+												Ethical Hacking
 											</h5>
 										</div>
 										<div class="col-xs-4 center-align">
 											<div class="circle-bar" id="line-container2">
 												<div class="progressbar-text" id="progress-text2">0</div>
 											</div>
-											<h5>Artificial Intelligence/
+											<h5>Artificial Intelligence/ <br>
 												Machine Learning</h5>
 										</div>
 										<div class="col-xs-4 center-align">
